0.Diploma/kubernetes/flask/flask-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: flask-app
    spec:      
      containers:
      - image: maxonchik/flask_app
        name: flask
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          protocol: TCP
        command:
          - "flask db init"
          - "flask db migrate"
          - "flask db upgrade"
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
          limits:
            cpu: 500m
            memory: 500Mi
