0.Diploma/kubernetes/flask/flask-service.yaml
apiVersion: v1
kind: Service
metadata:        
  name: flask
spec:
  selector:
    app: flask
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
